--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "m-share": "^1.0.2",
+    "mint-ui": "^2.2.13",
     "video.js": "^7.7.5",
     "videojs-contrib-hls": "^5.15.0",
     "videojs-flash": "^2.2.1",
@@ -30,6 +31,7 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
