--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "videojs-flash": "^2.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vue-video-player": "^5.0.2"
+    "vue-video-player": "^5.0.2",
+    "weixin-js-sdk": "^1.4.0-test"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
