--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "assets": "^3.0.1",
     "axios": "^0.19.2",
     "m-share": "^1.0.2",
     "mint-ui": "^2.2.13",
+    "reset.css": "^2.0.2",
     "video.js": "^7.7.5",
     "videojs-contrib-hls": "^5.15.0",
     "videojs-flash": "^2.2.1",
